# email-scraper

./: .gitignore  .travis.yml  README.rst  pyproject.toml  setup.py
.github/workflows/: test-and-publish.yml  test.yml
email_scraper/: __init__.py  scrape.py
tests/: test_readme.py  test_scraping.py
